@@ -2223,7 +2223,16 @@ unsigned int Magick::Image::animationIterations ( void ) const
   return constImage()->iterations;
 }
 
-// Access/Update a named image attribute
+// Access/Update a named image text attribute. Updates append the
+// provided to any existing attribute text.  Pass NULL as the value to
+// remove an existing value or before a subsequent call to add new
+// text.
+void Magick::Image::attribute ( const std::string name_,
+                                const char * value_ )
+{
+  modifyImage();
+  SetImageAttribute( image(), name_.c_str(), value_ );
+}
 void Magick::Image::attribute ( const std::string name_,
                                 const std::string value_ )
 {
