@@ -38,6 +38,11 @@
 <p>2017-03-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>Magick++/lib/Image.cpp (attribute): Added Image attribute method
+which accepts a 'char *' argument, and will remove the attribute
+if the value argument is NULL.  From patch provided by &quot;Gints&quot; as
+SourceForge patch #46 &quot;C++ api - method to clear/remove
+attribute&quot;.</li>
 <li>VisualMagick/configure/configure.cpp (InitInstance): Applied
 patch by Paul McConkey to allow the quantum command line argument
 to set the default value in the wizard drop list.  This allows
