@@ -39,7 +39,10 @@
 <blockquote>
 <ul class="simple">
 <li>lib/Image.cpp (orientation): Update orientation in EXIF profile,
-if it exists.</li>
+if it exists.
+(attribute): Added Image attribute method which accepts a 'char *'
+argument, and will remove the attribute if the value argument is
+NULL.</li>
 </ul>
 </blockquote>
 <p>2014-11-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
